# ENnUI

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: cpp_format.yml  cpp_unit_test.yml  pre-commit.yml
Ennui/: CMakeLists.txt  README.md
Ennui/geodetic/: CMakeLists.txt  frame_transform.hpp  gravitation.hpp  wgs84.hpp
Ennui/math/: CMakeLists.txt  rotation.hpp  units.hpp
Ennui/mechanization/: CMakeLists.txt  ecef.hpp
Ennui/types/: CMakeLists.txt  ennui_types.hpp
docs/: about.md  bibs.bib  development.md  index.md  organization.md  quickstart.md  requirements.txt
docs/api/: index.md
docs/demos/: mennui_build_library.md  pyennui_demo.ipynb
docs/stylesheets/: extra.css
matlab/: mennui_build_library.mlx
matlab/src/: CMakeLists.txt  mennui.cpp  mennui.hpp
python/: CMakeLists.txt  pyennui.cpp
python/reference/: setup.py
python/reference/pure_ennui/: __init__.py
python/reference/pure_ennui/geodetic/: __init__.py  gravitation.py  wgs84.py
python/reference/pure_ennui/math/: __init__.py  rotation.py
python/reference/pure_ennui/mechanization/: __init__.py  ecef.py
python/reference/pure_ennui/types/: ennui_types.py
tests/: CMakeLists.txt  reference_data.m
tests/common/: CMakeLists.txt  landmarks.cpp  landmarks.hpp  test_utils.hpp
tests/geodetic/: CMakeLists.txt  test_geodetic.cpp
tests/math/: CMakeLists.txt  test_quaternion.cpp  test_rotation.cpp
tests/mechanization/: CMakeLists.txt  test_ecef.cpp
